welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.code
def arrayFront9(nums:Array[Int]): Boolean = {var a = max(4,nums.length)
                                             for (k<-1 to a){if (nums(k)==9){return true}}
                                            return false}